# impulse-ml-dataset

./: CMakeLists.txt  README.md
src/: impulse-ml-dataset-modifier.cpp  main.cpp
src/src/Impulse/: Dataset.cpp  Dataset.h  DatasetSample.cpp  DatasetSample.h
src/src/Impulse/Dataset/: Dataset.cpp  Dataset.h  DatasetSample.cpp  DatasetSample.h  common.h  include.h
src/src/Impulse/Dataset/DatasetBuilder/: Abstract.cpp  Abstract.h  CSVBuilder.cpp  CSVBuilder.h
src/src/Impulse/Dataset/DatasetModifier/: DatasetSlicer.cpp  DatasetSlicer.h  DatasetSplitter.cpp  DatasetSplitter.h
src/src/Impulse/Dataset/DatasetModifier/Modifier/: Abstract.cpp  Abstract.h  Callback.cpp  Callback.h  Category.cpp  Category.h  CategoryId.h  MinMaxScaling.cpp  MinMaxScaling.h  MissingData.cpp  MissingData.h  ZScoresScaling.cpp  ZScoresScaling.h
src/src/Impulse/DatasetBuilder/: BaseBuilder.cpp  BaseBuilder.h  CSVBuilder.cpp  CSVBuilder.h
src/src/Impulse/DatasetModifier/: BaseDatasetModifier.cpp  BaseDatasetModifier.h  DatasetSlicer.cpp  DatasetSlicer.h  DatasetSplitter.cpp  DatasetSplitter.h
src/src/Impulse/DatasetModifier/Modifier/: Callback.cpp  Callback.h  Category.cpp  Category.h  MinMaxScaling.cpp  MinMaxScaling.h  MissingData.cpp  MissingData.h  ZScoresScaling.cpp  ZScoresScaling.h
